--- a/Pipfile
+++ b/Pipfile
@@ -13,6 +13,7 @@ marshmallow = "*"
 marshmallow-sqlalchemy = "*"
 flask-cors = "*"
 flask-marshmallow = "*"
+gunicorn = "*"
 
 [requires]
 python_version = "3.6"
